# edeck

./: Cargo.toml
src/: action.rs  bg.rs  buttons.rs  config.rs  dummy.rs  key.rs  main.rs  mic.rs  shell.rs  state.rs
