[package]
name = "edeck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
streamdeck = "0.4.9"
elgato-keylight = "0.5.0"
obws = "0.8.0"
pipewire = "0.4.1"
tokio = { version = "1", features = ["full"] }
